--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "beach_map"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["leudz <dylan.ancel@gmail.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 description = "Implementation of a slotmap"
 keywords = ["beachmap", "slotmap"]
-categories = ["Data structures"]
+categories = ["data-structures"]
 readme = "README.md"
 repository = "https://github.com/leudz/beach_map"
 
