--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ rayon = { version = "^1", optional = true }
 serde = { version = "^1", optional = true, default-features = false }
 
 [features]
-parallel = ["rayon"]
+parallel = ["rayon", "std"]
+std = []
 
 [dev-dependencies]
 serde_json = "^1"
