--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,7 @@ rayon = { version = "^1", optional = true }
 serde = { version = "^1", optional = true, default-features = false }
 
 [features]
-parallel = ["rayon", "std"]
-std = []
+parallel = ["rayon"]
 
 [dev-dependencies]
 serde_json = "^1"
